# Technical_vision

./: README.md
Lab4/: Lab4.pro  main.cpp
Lab_2/: Lab_2.pro  Lab_2.pro.user.b10ade2.4.8-pre1  README.md  main.cpp
Lab_3/: Lab_3.pro  lab3.h  lab3_3.cpp  lab3_3.h  main.cpp  vlad_3_3.cpp
Lab_4/: main.cpp
Lab_5/: Binary_video.avi  Lab_5.pro  Skelet_video.avi  main.cpp
Lab_6/: CMakeLists.txt  main.cpp
Labb5/: CMakeLists.txt
build-Lab4-Desktop-Debug/: Lab4  Makefile
build-Lab4-Desktop_Qt_5_12_1_GCC_64bit-Debug/: Makefile
build-Lab_2-Desktop-Release/: Lab_2  Makefile
build-Lab_2-Desktop_Qt_5_12_1_GCC_64bit-Debug/: Makefile
build-Lab_3-Desktop-Debug/: Lab_3  Makefile
build-Lab_3-Desktop_Qt_5_12_1_GCC_64bit-Debug/: Makefile
build-Lab_4-Desktop-Release/: .qmake.stash  Lab_4  Makefile
build-Lab_5-Desktop_Qt_5_12_1_GCC_64bit-Debug/: Lab_5  Makefile
build-Lab_6-Desktop_Qt_5_12_1_GCC_64bit-Debug/: Makefile
build-Lab_6-Desktop_Qt_5_12_1_GCC_64bit-u041fu043e u0443u043cu043eu043bu0447u0430u043du0438u044e/: CMakeCache.txt  Lab_6  Lab_6.cbp  Makefile  cmake_install.cmake
build-calibrate-Desktop_Qt_5_12_1_GCC_64bit--DCMAKE_BUILD_TYPE/: CMakeCache.txt  Makefile  calibrate.cbp  cmake_install.cmake
build-calibrate-Desktop_Qt_5_12_1_GCC_64bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  calibrate.cbp  cmake_install.cmake
build-calibrate-Desktop_Qt_5_12_1_GCC_64bit-u041fu043e u0443u043cu043eu043bu0447u0430u043du0438u044e/: Makefile  (+4 more)
markers/: CMakeLists.txt  main.cpp
markers/libs/: calibrate_camera.cpp  detect_markers.cpp  draw_cube.cpp
(+19 files in other folders)
